04_Kubernetes/temp/networkPolicy/namespacenetwork.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-network-selector

spec:
    podSelector: {}

    policyTypes:
      - Ingress

    ingress:
      - from:
        - namespaceSelector:
            matchLabels:
              env: production
