04_Kubernetes/temp/networkPolicy/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy

spec:
  podSelector:
    matchLabels:
      app: database

  policyTypes:
    - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend

    ports:
      - protocol: TCP
        port: 3306
